recent_view: Prevent participant avatars from overflowing.
We update max_avatars on rerenders based on recent view width
to prevent participant avatars from overflowing their width.

We use resize event to update `--recent-view-max-avatars` which
is checked on `complete_rerender`.

--- a/web/styles/app_variables.css
+++ b/web/styles/app_variables.css
@@ -702,6 +702,7 @@
     --color-invalid-input-box-shadow: 0 0 2px hsl(3deg 57% 33%);
 
     /* Recent view */
+    --recent-view-max-avatars: 4;
     --color-border-recent-view-row: hsl(0deg 0% 87%);
     --color-border-recent-view-table: hsl(0deg 0% 0% / 60%);
     --color-background-recent-view-row: hsl(100deg 11% 96%);
